# video-to-audio

./: .gitignore  README.md  video-to-audio.sln
cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
cpp/include/: Config.h  ConsoleUtils.h  VideoConverter.h  VideoFile.h
cpp/src/: Config.cpp  ConsoleUtils.cpp  VideoConverter.cpp  VideoFile.cpp  main.cpp
csharp/: .gitignore
csharp/VideoToAudioConverter/: Program.cs  build.sh
go/: .gitignore  convert.go  go.mod
java/: .gitignore  README.md  build.sh  pom.xml  run.sh
java/src/main/java/com/hackyourfuture/videoconverter/: Config.java  ConsoleUtils.java  VideoConverter.java  VideoConverterApp.java  VideoFile.java
node/: convert.js  package-lock.json  package.json
python/: .gitignore  convert.py
rust/: .gitignore  Cargo.toml  README.md  build.sh  run.sh
rust/src/: config.rs  converter.rs  main.rs  video_file.rs
